# zeroclaw

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  Justfile  README.md  deny.toml  install.sh  locales.toml
.cargo/: config.toml
.github/workflows/: docs-deploy.yml  pre-release-validate.yml  release-stable-manual.yml
api/: src-files.js
api/fill_translations/: fn.main.html  index.html
api/search.index/: 0052892e9572.js  0061e9bb7468.js  00bd83491880.js  00f11ec206dd.js  013abe313340.js  01bc37453975.js  01bcb7d891ae.js  01c516f53bd7.js  01e040339886.js  021b856e9572.js  02329f962539.js  0294aa82f8db.js  03685f22695b.js  036f7b97e63d.js  039baafb0310.js  03d51ae3c4bf.js  03d961bb0cc5.js  03dd211acc5d.js  04335b1154ec.js  0438cb81d108.js  045996322cfc.js  049a579212be.js  04a0c17ec8f8.js  04d0bb514381.js  0511ac78b042.js  05137844cc6e.js  051ef742b700.js  052555c49c10.js  057f9a6a6b5c.js  0581d733e618.js  0638cb051500.js  066c2acb603a.js  067997973b10.js  068a41ddd8df.js  06c10992890e.js  06d2b3ee8956.js  06d7333db668.js  06f13c0c5b25.js  0718a8c835de.js  076aaeb1b073.js  (+681 more)
api/zeroclaw/: all.html  enum.ChannelCommands.html  enum.CronCommands.html  enum.GatewayCommands.html  enum.HardwareCommands.html  enum.IntegrationCommands.html  enum.MemoryCommands.html  enum.MigrateCommands.html  enum.PeripheralCommands.html  enum.ServiceCommands.html  enum.SkillCommands.html  enum.SopCommands.html  index.html  sidebar-items.js  struct.Config.html
api/zeroclaw_api/: all.html
api/zeroclaw_config/: all.html
api/zeroclaw_gateway/: all.html  fn.run_gateway.html  fn.verify_whatsapp_signature.html  index.html  struct.WatiVerifyQuery.html  struct.WebhookBody.html  struct.WhatsAppVerifyQuery.html
api/zeroclaw_hardware/: enum.HardwareTransport.html  struct.HardwareConfig.html
api/zeroclaw_macros/: derive.Configurable.html  index.html
api/zeroclaw_memory/: enum.MemoryCategory.html  struct.ExportFilter.html  struct.MemoryEntry.html  struct.ProceduralMessage.html
api/zeroclaw_plugins/: enum.PluginCapability.html  enum.PluginPermission.html  index.html  struct.PluginInfo.html  struct.PluginManifest.html
api/zeroclaw_providers/: all.html  enum.ConversationMessage.html  fn.api_error.html  fn.create_provider.html  (+41 more)
crates/zeroclaw-channels/: Cargo.toml
crates/zeroclaw-channels/src/: bluesky.rs  clawdtalk.rs  cli.rs  dingtalk.rs  discord.rs  discord_history.rs  email_channel.rs  gmail_push.rs  imessage.rs  irc.rs  lark.rs  lib.rs  linq.rs  matrix.rs  mattermost.rs  media_pipeline.rs  mochat.rs  nextcloud_talk.rs  nostr.rs  notion.rs  qq.rs  reddit.rs  signal.rs  slack.rs  traits.rs  transcription.rs  twitter.rs  util.rs  voice_call.rs  voice_wake.rs  wati.rs  webhook.rs  wecom.rs  whatsapp.rs  whatsapp_web.rs
crates/zeroclaw-channels/src/orchestrator/: acp_server.rs  mod.rs
crates/zeroclaw-config/: Cargo.toml
crates/zeroclaw-config/src/: api_error.rs  helpers.rs  lib.rs  migration.rs  policy.rs  scattered_types.rs  schema.rs  security_policy.rs  traits.rs  trust_config.rs  typed_value.rs
crates/zeroclaw-core/: Cargo.toml
crates/zeroclaw-core/src/: cron_types.rs  identity.rs  lib.rs
crates/zeroclaw-core/src/hands/: types.rs
crates/zeroclaw-core/src/heartbeat/: engine.rs  mod.rs
crates/zeroclaw-core/src/hooks/: runner.rs  traits.rs
crates/zeroclaw-core/src/hooks/builtin/: command_logger.rs  webhook_audit.rs
crates/zeroclaw-core/src/observability/: runtime_trace.rs
crates/zeroclaw-core/src/plugins/: wasm_channel.rs  wasm_tool.rs
crates/zeroclaw-core/src/rag/: mod.rs
crates/zeroclaw-core/src/runtime/: docker.rs  mod.rs
crates/zeroclaw-core/src/security/: audit.rs  detect.rs  domain_matcher.rs  estop.rs  landlock.rs  mod.rs  otp.rs  policy.rs
crates/zeroclaw-core/src/sop/: cron_util.rs  dispatch.rs  engine.rs  metrics.rs  mod.rs  types.rs
crates/zeroclaw-core/src/trust/: types.rs
crates/zeroclaw-core/src/tui/: onboarding.rs
crates/zeroclaw-core/src/tunnel/: custom.rs  mod.rs
crates/zeroclaw-infra/: Cargo.toml
crates/zeroclaw-infra/src/: lib.rs  session_backend.rs  session_sqlite.rs  session_store.rs
crates/zeroclaw-memory/: Cargo.toml
crates/zeroclaw-memory/src/: audit.rs  consolidation.rs  hygiene.rs  lib.rs  namespaced.rs  postgres.rs  retrieval.rs  sqlite.rs
crates/zeroclaw-providers/: Cargo.toml
crates/zeroclaw-providers/src/: anthropic.rs  azure_openai.rs  bedrock.rs  claude_code.rs  compatible.rs  copilot.rs  gemini.rs  lib.rs  models_dev.rs  multimodal.rs  ollama.rs  openai.rs  openai_codex.rs  openrouter.rs  reliable.rs  router.rs  traits.rs
crates/zeroclaw-providers/src/auth/: mod.rs  profiles.rs
crates/zeroclaw-tools/: Cargo.toml
crates/zeroclaw-tools/src/: ask_user.rs  backup_tool.rs  browser.rs  browser_delegate.rs  browser_open.rs  calculator.rs  canvas.rs  claude_code.rs  claude_code_runner.rs  cloud_ops.rs  cloud_patterns.rs  codex_cli.rs  composio.rs  content_search.rs  data_management.rs  discord_search.rs  escalate.rs  file_edit.rs  file_write.rs  gemini_cli.rs  git_operations.rs  glob_search.rs  google_workspace.rs  hardware_board_info.rs  hardware_memory_map.rs  hardware_memory_read.rs  http_request.rs  image_gen.rs  image_info.rs  jira_tool.rs  knowledge_tool.rs  lib.rs  linkedin.rs  llm_task.rs  mcp_deferred.rs  mcp_tool.rs  memory_export.rs  memory_forget.rs  memory_purge.rs  memory_recall.rs  (+22 more)
crates/zeroclaw-types/: Cargo.toml
crates/zeroclaw-types/src/: channel.rs  lib.rs  media.rs  provider.rs  summarizer.rs  tool.rs
en/: 404.html  api.html  introduction.html  philosophy.html  print.html  searcher-c2a407aa.js
es/: 404.html  api.html  index.html  philosophy.html  print.html  searcher-c2a407aa.js
fr/: 404.html  api.html  index.html  philosophy.html  print.html  searcher-c2a407aa.js
ja/: 404.html  api.html  introduction.html  philosophy.html  print.html  searcher-c2a407aa.js
scripts/: docs.sh  fill-translations.py  sync-translations.sh
src/: identity.rs  lib.rs  main.rs  multimodal.rs  schema_markdown.rs
xtask/: Cargo.toml
zh-CN/: 404.html  api.html  index.html  philosophy.html  print.html
(+1603 files in other folders)
