[package]
name = "zeroclaw-channels"
version = "0.1.0"
edition = "2024"
description = "Channel implementations for ZeroClaw messaging platform integrations"
license = "MIT OR Apache-2.0"
rust-version = "1.87"

[dependencies]
zeroclaw-types = { path = "../zeroclaw-types" }
zeroclaw-infra = { path = "../zeroclaw-infra" }
zeroclaw-config = { path = "../zeroclaw-config", default-features = false }
zeroclaw-memory = { path = "../zeroclaw-memory" }
zeroclaw-providers = { path = "../zeroclaw-providers" }
anyhow = "1.0"
async-imap = { version = "0.11", features = ["runtime-tokio"], default-features = false, optional = true }
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio", "query", "ws"] }
cpal = { version = "0.15", optional = true }
dialoguer = { version = "0.12", features = ["fuzzy-select"] }
directories = "6.0"
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
hex = "0.4"
hmac = "0.12"
hostname = "0.4.2"
lettre = { version = "0.11.19", default-features = false, features = ["builder", "smtp-transport", "rustls-tls"], optional = true }
mail-parser = { version = "0.11.2", optional = true }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"], optional = true }
parking_lot = "0.12"
nostr-sdk = { version = "0.44", default-features = false, features = ["nip04", "nip59"], optional = true }
rand = "0.10"
portable-atomic = "1"
prost = { version = "0.14", default-features = false, features = ["derive"], optional = true }
qrcode = { version = "0.14", optional = true }
regex = "1.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart", "stream", "socks"] }
rumqttc = { version = "0.24", optional = true }
rusqlite = { version = "0.37", features = ["bundled"] }
rustls = "0.23"
rustls-pemfile = "2"
rustls-pki-types = "1.14.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shellexpand = "3.1"
sha2 = "0.10"
tokio = { version = "1.50", default-features = false, features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util", "io-std", "fs", "process", "signal"] }
tokio-rustls = "0.26.4"
tokio-stream = { version = "0.1.18", default-features = false, features = ["fs", "sync"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
tracing = { version = "0.1", default-features = false }
uuid = { version = "1.22", default-features = false, features = ["v4", "std"] }
wa-rs = { version = "0.2", optional = true, default-features = false }
wa-rs-core = { version = "0.2", optional = true, default-features = false }
wa-rs-binary = { version = "0.2", optional = true, default-features = false }
wa-rs-proto = { version = "0.2", optional = true, default-features = false }
wa-rs-ureq-http = { version = "0.2", optional = true }
wa-rs-tokio-transport = { version = "0.2", optional = true, default-features = false }
serde-big-array = { version = "0.5", optional = true }
webpki-roots = "1.0.6"
nanohtml2text = "0.2"
console = "0.16"
tokio-socks = "0.5"
glob = "0.3"
urlencoding = "2.1"

[features]
default = []
channel-telegram = ["dep:image"]

channel-email = ["dep:lettre", "dep:mail-parser", "dep:async-imap"]
channel-lark = ["dep:prost"]
channel-nostr = ["dep:nostr-sdk"]
voice-wake = ["dep:cpal"]
whatsapp-web = ["dep:wa-rs", "dep:wa-rs-core", "dep:wa-rs-binary", "dep:wa-rs-proto", "dep:wa-rs-ureq-http", "dep:wa-rs-tokio-transport", "dep:serde-big-array", "dep:prost", "dep:qrcode"]
