[package]
name = "zeroclaw-config"
version = "0.1.0"
edition = "2024"
description = "Configuration schema types for ZeroClaw"
license = "MIT OR Apache-2.0"
rust-version = "1.87"

[dependencies]
zeroclaw-types = { path = "../zeroclaw-types" }
anyhow = "1.0"
chacha20poly1305 = "0.10"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
chrono-tz = "0.10"
cron = "0.15"
directories = "6.0"
hostname = "0.4.2"
rand = "0.10"
regex = "1.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "socks"] }
rustls = "0.23"
rustls-pemfile = "2"
rustls-pki-types = "1.14.0"
schemars = { version = "1.2", optional = true, features = ["chrono04"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shellexpand = "3.1"
thiserror = "2.0"
tokio = { version = "1.50", default-features = false, features = ["sync", "fs", "io-util", "net"] }
tokio-rustls = "0.26.4"
tokio-socks = "0.5"
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
toml = "1.0"
tracing = { version = "0.1", default-features = false }
url = "2.5"
uuid = { version = "1.22", default-features = false, features = ["v4", "std"] }
webpki-roots = "1.0.6"

[features]
default = ["schema-export"]
schema-export = ["dep:schemars"]
