[package]
name = "zeroclaw-core"
version = "0.1.0"
edition = "2024"
description = "Core modules for ZeroClaw (security, hardware, SOP, skills, observability, etc.)"
license = "MIT OR Apache-2.0"
rust-version = "1.87"

[dependencies]
zeroclaw-types = { path = "../zeroclaw-types" }
zeroclaw-infra = { path = "../zeroclaw-infra" }
zeroclaw-config = { path = "../zeroclaw-config", default-features = false }
zeroclaw-memory = { path = "../zeroclaw-memory" }
zeroclaw-providers = { path = "../zeroclaw-providers" }
zeroclaw-tools = { path = "../zeroclaw-tools" }
zeroclaw-channels = { path = "../zeroclaw-channels" }
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
chacha20poly1305 = "0.10"
console = "0.16"
cron = "0.15"
crossterm = { version = "0.29", features = ["event-stream"], optional = true }
dialoguer = { version = "0.12", features = ["fuzzy-select"] }
directories = "6.0"
glob = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
hex = "0.4"
hmac = "0.12"
hostname = "0.4.2"
indicatif = "0.18"
nanohtml2text = "0.2"
opentelemetry = { version = "0.31", default-features = false, features = ["trace", "metrics"], optional = true }
opentelemetry_sdk = { version = "0.31", default-features = false, features = ["trace", "metrics"], optional = true }
opentelemetry-otlp = { version = "0.31", default-features = false, features = ["trace", "metrics", "http-proto", "reqwest-blocking-client", "reqwest-rustls-webpki-roots"], optional = true }
parking_lot = "0.12"
prometheus = { version = "0.14", default-features = false, optional = true }
portable-atomic = "1"
rand = "0.10"
ratatui = { version = "0.30", default-features = true, optional = true }
regex = "1.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart", "stream"] }
ring = "0.17"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scopeguard = "1.2"
sha2 = "0.10"
shellexpand = "3.1"
tempfile = "3.26"
thiserror = "2.0"
tokio = { version = "1.50", default-features = false, features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util", "fs", "process", "signal"] }
tokio-stream = { version = "0.1.18", default-features = false, features = ["sync"] }
toml = "1.0"
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi", "env-filter"] }
uuid = { version = "1.22", default-features = false, features = ["v4", "std"] }
which = "8.0"
zip = { version = "8.1", default-features = false, features = ["deflate-flate2"] }

aardvark-sys = { path = "../aardvark-sys", version = "0.1.0" }

[target.'cfg(any(target_os = "linux", target_os = "macos", target_os = "windows"))'.dependencies]
nusb = { version = "0.2", default-features = false, optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
rppal = { version = "0.22", optional = true }
tokio-serial = { version = "5", default-features = false, optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = ["tui-onboarding", "observability-prometheus"]
hardware = ["dep:nusb", "dep:tokio-serial"]
peripheral-rpi = ["dep:rppal"]
tui-onboarding = ["dep:ratatui", "dep:crossterm"]
observability-prometheus = ["dep:prometheus"]
observability-otel = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp"]
