[package]
name = "zeroclaw-memory"
version = "0.1.0"
edition = "2024"
description = "Memory subsystem for ZeroClaw (SQLite, embeddings, retrieval, consolidation)"
license = "MIT OR Apache-2.0"
rust-version = "1.87"

[dependencies]
zeroclaw-types = { path = "../zeroclaw-types" }
zeroclaw-config = { path = "../zeroclaw-config", default-features = false }
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
parking_lot = "0.12"
regex = "1.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.50", default-features = false, features = ["sync", "time", "fs", "rt", "process"] }
tracing = { version = "0.1", default-features = false }
uuid = { version = "1.22", default-features = false, features = ["v4", "std"] }
sha2 = "0.10"
