[package]
name = "zeroclaw-providers"
version = "0.1.0"
edition = "2024"
description = "LLM provider implementations for ZeroClaw"
license = "MIT OR Apache-2.0"
rust-version = "1.87"

[dependencies]
zeroclaw-types = { path = "../zeroclaw-types" }
zeroclaw-config = { path = "../zeroclaw-config", default-features = false }
anyhow = "1.0"
chacha20poly1305 = "0.10"
directories = "6.0"
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
hmac = "0.12"
parking_lot = "0.12"
rand = "0.10"
regex = "1.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking", "multipart", "stream"] }
ring = "0.17"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1.50", default-features = false, features = ["rt-multi-thread", "macros", "sync", "time", "fs", "process"] }
tokio-util = { version = "0.7", default-features = false }
tokio-stream = { version = "0.1.18", default-features = false, features = ["sync"] }
tracing = { version = "0.1", default-features = false }
uuid = { version = "1.22", default-features = false, features = ["v4", "std"] }
