[package]
name = "zeroclaw-tools"
version = "0.1.0"
edition = "2024"
description = "Tool implementations for ZeroClaw agent capabilities"
license = "MIT OR Apache-2.0"
rust-version = "1.87"

[dependencies]
zeroclaw-types = { path = "../zeroclaw-types" }
zeroclaw-infra = { path = "../zeroclaw-infra" }
zeroclaw-config = { path = "../zeroclaw-config", default-features = false }
zeroclaw-memory = { path = "../zeroclaw-memory" }
zeroclaw-providers = { path = "../zeroclaw-providers" }
zeroclaw-channels = { path = "../zeroclaw-channels" }
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
flate2 = "1"
directories = "6.0"
glob = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
hex = "0.4"
hmac = "0.12"
parking_lot = "0.12"
regex = "1.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart", "stream"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.0"
thiserror = "2.0"
tokio-util = { version = "0.7", default-features = false }
sha2 = "0.10"
tar = "0.4"
tempfile = "3.26"
tokio = { version = "1.50", default-features = false, features = ["rt-multi-thread", "macros", "sync", "time", "fs", "process", "io-util"] }
tokio-stream = { version = "0.1.18", default-features = false, features = ["sync"] }
tracing = { version = "0.1", default-features = false }
uuid = { version = "1.22", default-features = false, features = ["v4", "std"] }
nanohtml2text = "0.2"
urlencoding = "2.1"
indicatif = "0.18"
which = "8.0"
zip = { version = "8.1", default-features = false, features = ["deflate-flate2"] }
