[package]
name = "zeroclaw-types"
version = "0.1.0"
edition = "2024"
description = "Core trait definitions and message types for ZeroClaw"
license = "MIT OR Apache-2.0"
rust-version = "1.87"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.50", default-features = false, features = ["sync"] }
tokio-util = { version = "0.7", default-features = false }
